--- a/files/font.css
+++ b/files/font.css
@@ -1,20 +1,6 @@
-@font-face {
-    font-family: "Dante";
-    src: url("Dante-MT-Std-Italic.woff") format('woff');
-    font-weight: italic;
-}
-
-@font-face {
-    font-family: "Dante";
-    src: url("Dante-MT-Std-Regular.woff") format('woff');
-}
-
-@font-face {
-    font-family: "Dante";
-    src: url("Dante-MT-Std-Bold.woff") format('woff');
-    font-weight: bold;
-}
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet"> 
 
 
 @font-face {
